# MNIST-Digits-Classification-Using-CNN-PyTorch-

./: README.md  SimpleNN.py  main.ipynb  main.py  pyproject.toml
