[project]
name = "mnist-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
